# switchboard

./: .containerignore  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.MD  justfile  opencode.json  zodify.md
binary/sb/: Cargo.toml
binary/sb/src/: clap.rs  commands.rs  error.rs  main.rs  workspace.rs
binary/sbc/: Cargo.toml
binary/sbc/src/: main.rs  radar.rs  sbk_discovery.rs
binary/sbk/: Cargo.toml
binary/sbk/src/: main.rs  register.rs
binary/sbr/: Cargo.toml
binary/sbr/src/: config.rs  main.rs
crates/config/fs/: Cargo.toml
crates/config/fs/src/: lib.rs
crates/config/surrealdb/: Cargo.toml
crates/config/surrealdb/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: config.rs  dir.rs  interface.rs  kernel.rs  lib.rs  link_resolver.rs  radar.rs  resolve.rs  resource.rs  run.rs  storage.rs
crates/controller/src/interface/: http.rs
crates/controller/src/interface/http/: file_browser.rs  k8s.rs  kernel_manager.rs  resolve.rs  state.rs  storage.rs
crates/controller/src/kernel/: connection.rs  discovery.rs  grpc_client.rs
crates/controller/src/kernel/connection/: tcp.rs  uds.rs
crates/controller/src/kernel/discovery/: k8s.rs  local.rs  uds.rs
crates/controller/src/resolve/: fs.rs  k8s.rs
crates/controller/src/resolve/k8s/: service_config.rs
crates/controller/src/resource/: gateway.rs  tls.rs
crates/controller/src/resource/gateway/: k8s.rs
crates/controller/src/resource/tls/: file.rs  k8s.rs  unix_local.rs
crates/controller/src/run/: k8s.rs
crates/controller/src/run/k8s/: apply.rs  events.rs  reconcile.rs  watch.rs
crates/controller/src/storage/: surrealdb_local.rs
crates/controller/src/storage/surrealdb_local/: define.surrealql
crates/controller/src/utils/: k8s.rs
crates/controller/tests/: test_db_storage.rs  test_json_codec.rs
crates/controller/tests/test_json_codec/: human_readable_service_config.json
crates/ext/switchboard-deno/: Cargo.toml
crates/kernel/: Cargo.toml  README.MD
crates/kernel/src/: config.rs  config_engine.rs  controller.rs  lib.rs  main.rs  registry.rs  script_engine.rs  supervisor.rs  switchboard.rs  tls.rs
crates/kernel/src/config/: file.rs  mem.rs
crates/kernel/src/config_engine/: typescript.rs
crates/kernel/src/controller/: discovery.rs  grpc_service.rs  listener.rs
crates/kernel/src/controller/discovery/: local.rs
crates/kernel/src/controller/listener/: http.rs  tcp.rs  uds.rs
crates/kernel/src/registry/: handle.rs
crates/kernel/src/script_engine/: typescript.rs
crates/kernel/src/supervisor/: handle.rs
crates/kernel/src/switchboard/: tcp.rs
crates/libs/switchboard-custom-config/: Cargo.toml
crates/libs/switchboard-custom-config/src/: formats.rs  fs.rs  lib.rs  link.rs
crates/libs/switchboard-custom-config/src/formats/: bincode.rs  json.rs  plaintext.rs  toml.rs  toon.rs
crates/libs/switchboard-custom-config/tests/: test_deserialize_link_or_string.rs
crates/libs/switchboard-file-resolver/: Cargo.toml
crates/libs/switchboard-file-resolver/src/: lib.rs
crates/libs/switchboard-http-router/: Cargo.toml
crates/libs/switchboard-http-router/src/: error.rs  hostname.rs  lib.rs  path.rs  rule.rs  serde.rs  utils.rs
crates/libs/switchboard-http-router/tests/: test_matched.rs
crates/libs/switchboard-kernel-control/: Cargo.toml  build.rs
crates/libs/switchboard-kernel-control/protocol/: kernel.proto
crates/libs/switchboard-kernel-control/src/: lib.rs  type_convert.rs
crates/libs/switchboard-link-or-value/: Cargo.toml
crates/libs/switchboard-link-or-value/src/: lib.rs  resolver.rs
crates/libs/switchboard-payload/: Cargo.toml
crates/libs/switchboard-payload/src/: formats.rs  fs.rs  lib.rs
crates/libs/switchboard-serde-value/: Cargo.toml
crates/libs/switchboard-serde-value/src/: collection.rs  lib.rs  macros.rs  option.rs  primitive.rs  variant.rs
crates/libs/switchboard-serde-value/tests/: test_custom_config.rs  test_enum.rs
crates/model/: Cargo.toml
crates/model/src/: bind.rs  bytes.rs  control.rs  controller.rs  cursor.rs  descriptor.rs  discovery.rs  error.rs  item.rs  kernel.rs  kernel_state.rs  lib.rs  listener.rs  named_service.rs  protocol.rs  rbac.rs  regex.rs  resolve.rs  tag.rs  tcp_route.rs  tcp_service.rs  tls.rs
crates/model/src/resolve/: file_style.rs  fs.rs
crates/model/src/services/: http.rs
crates/model/src/tls/: sni.rs  strategy.rs
crates/noto-shell/: Cargo.toml
crates/noto-shell/src/: lib.rs  main.rs
crates/noto-tcp/: Cargo.toml
crates/noto-tcp/src/: lib.rs  tls.rs
crates/service/: Cargo.toml
crates/service-impl/http/: Cargo.toml  README.MD  sbh.config.js
crates/service-impl/http/scripts/: export-types.rs
crates/service-impl/http/src/: config.rs  consts.rs  dynamic.rs  extension.rs  flow.rs  implementation.rs  index.ts  instance.rs  layer.rs  lib.rs  node.rs  object.rs  response.rs  router.rs  service.rs  utils.rs
crates/service-impl/pf/: Cargo.toml
crates/service-impl/pf/src/: lib.rs
crates/service-impl/tcp/: Cargo.toml
crates/service-impl/tcp/src/: balancer.rs  inbound.rs  lib.rs  outbound.rs
crates/service-impl/uds/: Cargo.toml
crates/service-impl/uds/src/: lib.rs
crates/service-impl/web-interface/: Cargo.toml
crates/service-impl/web-interface/src/: error.rs  http.rs  lib.rs
crates/service/http/: Cargo.toml
crates/service/http/src/: service.rs
crates/service/imap/: Cargo.toml
crates/service/pf/: Cargo.toml
crates/service/pf/src/: lib.rs
crates/service/pop3/: Cargo.toml
crates/service/smtp/: Cargo.toml
crates/service/socks5/: Cargo.toml
crates/service/socks5/src/: lib.rs
crates/service/src/: lib.rs  registry.rs  tcp.rs  udp.rs  utils.rs
crates/service/src/tcp/: tls.rs
crates/service/src/utils/: rewind.rs
crates/service/tcp/: Cargo.toml
crates/service/trojan/: Cargo.toml
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  main.rs
documents/: plugin-system.md  (+4 more)
examples/example-api-server/: Cargo.toml
examples/example-api-server/src/: main.rs
examples/example-http-plugin/: Cargo.toml
examples/example-http-plugin/src/: lib.rs
(+444 files in other folders)
