[workspace]
members = ["crates/service/*", "crates/config/*", "crates/model"]
resolver = "2"

[workspace.dependencies]
switchboard-tcp = { path = "crates/service/tcp" }
switchboard-socks5 = { path = "crates/service/socks5" }
switchboard-model = { path = "crates/model" }

tokio = { version = "1" }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
rustls = { version = "0.23" }
tokio-rustls = { version = "0.26" }
clap = { version = "4", features = ["derive", "env"] }

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["4t145 <u4t145@163.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/4t145/hypergate/"
homepage = "https://github.com/4t145/hypergate"
categories = ["network-programming", "asynchronous"]
readme = "README.md"
