[workspace]
members = [
    "crates/service-impl/*",
    "crates/model",
    "crates/kernel",
    "crates/service",
    "crates/ext/switchboard-deno",
    "crates/controller",
    "binary/sbk",
    "binary/sbc",
    "crates/libs/switchboard-http-router",
    "crates/libs/switchboard-custom-config",
    # examples
    "examples/example-api-server",
    "crates/libs/switchboard-kernel-control",
    "crates/libs/switchboard-serde-value",
    "crates/libs/switchboard-link-or-value", "crates/libs/switchboard-file-resolver",
]
resolver = "2"

[workspace.dependencies]
switchboard-service = { path = "crates/service" }
switchboard-socks5 = { path = "crates/service-impl/socks5" }
switchboard-model = { path = "crates/model" }

switchboard-http-router = { path = "crates/libs/switchboard-http-router" }
switchboard-custom-config = { path = "crates/libs/switchboard-custom-config" }
switchboard-kernel-control = { path = "crates/libs/switchboard-kernel-control", default-features = false }
switchboard-serde-value = { path = "crates/libs/switchboard-serde-value" }
switchboard-link-or-value = { path = "crates/libs/switchboard-link-or-value" }
switchboard-file-resolver = { path = "crates/libs/switchboard-file-resolver" }

tokio = { version = "1" }
tokio-util = { version = "0.7" }
tracing = { version = "0.1" }
rustls = { version = "0.23" }
tokio-rustls = { version = "0.26" }
clap = { version = "4", features = ["derive", "env"] }
futures = { version = "0" }

# http
http = { version = "1" }

# grpc
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tonic-health = { version = "0.14" }
prost = { version = "0.14" }
tonic-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }

# Serde
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }
toml = { version = "0.9" }
bincode = { version = "2", features = ["serde"] }
# Error
thiserror = { version = "2" }

# Futures
pin-project-lite = "0.2.16"

# Codec
base64 = { version = "0.22" }

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["4t145 <u4t145@163.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/4t145/hypergate/"
homepage = "https://github.com/4t145/hypergate"
categories = ["network-programming", "asynchronous"]
readme = "README.md"
