[package]
name = "switchboard-controller"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
thiserror = { workspace = true }
switchboard-model = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
anyhow = { version = "1" }
rand = { version  = "0.9" }
tokio-util = { workspace = true }
dirs = { version = "6" }
# user interface
## http
axum = { version  = "0.8" }
## mcp
# rmcp = { version = "0.10" }
base64 = { workspace = true }
# k8s
kube = { version = "2", features = ["runtime", "derive", "client", "config"] }
k8s-openapi = { version = "0.26", default-features = false, features = ["v1_34"] }