[package]
name = "switchboard-controller"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
thiserror = { workspace = true }
switchboard-model = { workspace = true }
switchboard-kernel-control = { workspace = true, features = ["client"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
bincode = { version = "2", features = ["serde"] }
anyhow = { version = "1" }
rand = { version  = "0.9" }
tokio-util = { workspace = true }
dirs = { version = "6" }
# user interface
## http
http = { workspace = true }
axum = { version  = "0.8" }
# grpc
tonic = { workspace = true, features = ["transport"] }
## mcp
# rmcp = { version = "0.10" }
base64 = { workspace = true }
# k8s
kube = { version = "2", features = ["runtime", "derive", "client", "config", "http-proxy", "aws-lc-rs"] }
k8s-openapi = { version = "0.26", default-features = false, features = ["v1_34"] }
gateway-api = "0.19.0"

switchboard-http-router = { workspace = true }
switchboard-custom-config = { workspace = true }
regex = { version = "1"}
bytes = { version = "1"}
chrono = { version = "0.4", features = ["serde"] }

surrealdb = { version = "2", features = ["kv-rocksdb"]}
sha2 = { version = "0.10" }
hex = { version = "0.4" }
uuid = { version = "1", features = ["v7"] }