[package]
name = "switchboard-kernel"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
switchboard-model = { workspace = true }
switchboard-service = { workspace = true }
switchboard-socks5 = { path = "../service-impl/socks5" }
switchboard-pf = { path = "../service-impl/pf" }
switchboard-uds = { path = "../service-impl/uds" }
switchboard-http = { path = "../service-impl/http" }
tracing = { workspace = true }

serde_json = { version = "1", features = ["preserve_order"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], optional = true }
rustls = { workspace = true }
deno_core = { version = "0.371" }
deno_ast = { version = "0.52", features = ["transpiling"] }
[features]
binary = ["dep:tracing-subscriber"]
# typescript = ["dep:deno_core", "dep:deno_ast"]