[package]
name = "switchboard-kernel"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
switchboard-model = { workspace = true }
switchboard-service = { workspace = true }
switchboard-socks5 = { path = "../service-impl/socks5" }
switchboard-pf = { path = "../service-impl/pf" }
switchboard-uds = { path = "../service-impl/uds" }
switchboard-http = { path = "../service-impl/http" }
futures = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rand = { version  = "0.9" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], optional = true }
rustls = { workspace = true }
anyhow = { version = "1" }
bincode = { version = "2", features = ["serde"] }

# deno_fetch = { version = "0.245" }
v8 = { version = "142.2" }
[features]
binary = ["dep:tracing-subscriber"]
# typescript = ["dep:deno_core", "dep:deno_ast"]
