[package]
name = "switchboard-kernel"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
switchboard-model = { workspace = true }
switchboard-custom-config = { workspace = true }
switchboard-kernel-control = { workspace = true, default-features = false, features = ["server"] }
switchboard-service = { workspace = true }
switchboard-socks5 = { path = "../service-impl/socks5" }
switchboard-pf = { path = "../service-impl/pf" }
switchboard-uds = { path = "../service-impl/uds" }
switchboard-http = { path = "../service-impl/http" }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1" }
tokio-rustls = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rand = { version  = "0.9" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], optional = true }
rustls = { workspace = true }
anyhow = { version = "1" }
bincode = { version = "2", features = ["serde"] }
base64 = { workspace = true }

tonic = { version = "0.14", features = ["tls-connect-info", "transport"]}
# deno_fetch = { version = "0.245" }
[features]
binary = ["dep:tracing-subscriber"]
# typescript = ["dep:deno_core", "dep:deno_ast"]
