[package]
name = "switchboard-model"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio = { workspace = true, features = ["io-util"] }
serde = { workspace = true, features = ["derive"] }
bon = { version = "3.6" }
chrono = { version = "0.4", features = ["serde"] }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
bincode = { version = "2", features = ["serde"] }
base64 = { workspace = true }
pem = { version = "3" }
thiserror = { workspace = true }
schemars = { version = "1", features = [] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = { version = "1" }
http = { version = "1"}