[package]
name = "noto-shell"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true
[[bin]]
name = "noto-shell"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = [] }
tracing = { workspace = true }
noto-tcp = { version = "0.1.0", workspace = true }
noto-socks5 = { version = "0.1.0", workspace = true }