[package]
name = "noto-tcp"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = [] }
tracing = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }