[package]
name = "example-api-server"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"]}
axum = { version = "0.8" }
anyhow = { version = "1" }
tracing =  { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }