[package]
name = "switchboard-config-fs"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
switchboard-model = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["io-util", "fs", "sync"] }
thiserror = { workspace = true }
pin-project-lite = { workspace = true }
