[package]
name = "switchboard-config-surrealdb"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
surrealdb = { version = "2.3.2", features = ["kv-mem", "kv-rocksdb"] }
serde = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
    "sync",
] }
