[package]
name = "switchboard-deno"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
deno_core = { version = "0.371" }
deno_ast = { version = "0.52", features = ["transpiling"] }