[package]
name = "switchboard-file-resolver"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

switchboard-serde-value = { workspace = true, features = ["bincode"] }
switchboard-link-or-value = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_toon = { version = "0.2" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"]}