[package]
name = "switchboard-http-router"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
http = { workspace = true }
matchit = "0.9"
regex = { version = "1"}
thiserror = { workspace = true }

serde = { workspace = true, features = ["derive", "rc"] }
bincode = { workspace = true }
bytes = { version = "1" }