[package]
name = "switchboard-kernel-control"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
switchboard-model = { workspace = true }
thiserror = { workspace = true }
[features]
default = ["client", "server"]
client = []
server = []
[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }