[package]
name = "switchboard-link-or-value"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }