[package]
name = "switchboard-payload"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bytes = { version = "1", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }

# formats
bincode = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_toon = { version = "0.2" }
thiserror = { workspace = true }


tokio = { workspace = true, optional = true }
[features]
fs = ["tokio/fs"]