[package]
name = "switchboard-http"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["full"] }
pin-project-lite = "0.2.16"
rustls = { workspace = true }
serde = { version = "1.0", features = ["derive", "rc"] }
schemars = { version = "0.8", features = [] }
anyhow = { version = "1" }
thiserror = { version = "2" }
uuid = { version = "1", features = ["v4"] }
