[package]
name = "switchboard-http"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

bytes = "1.10.1"
http = "1.3.1"
http-body = "1"
futures = "0.3.31"
http-body-util = "0.1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = { version = "2" }
switchboard-model = { workspace = true }
switchboard-service = { version = "0.1.0", workspace = true }
tracing = { workspace = true }

# Hyper impl
hyper = { version = "1.6.0", features = ["client", "server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1.10", features = ["full"],  optional = true  }
pin-project-lite = { version = "0.2.16",  optional = true }
rustls = { workspace = true,  optional = true }
uuid = { version = "1", features = ["v4"],  optional = true  }
tokio-rustls = { workspace = true, optional = true }
hyper-rustls = { version = "0.27", features = ["http2"], optional = true }
matchit = { version = "0.9",  optional = true }
rand = { version =  "0.9",  optional = true }
switchboard-http-router = { workspace = true, optional = true }
libloading = { version = "0.9", optional = true }

# Runtime
tokio = { workspace = true, features = ["full"],  optional = true }
tokio-util = { workspace = true,  optional = true }

# chrono = { version = "0.4", features = ["serde"] }
#
[features]
default = ["service-impl", "runtime"]
service-impl = ["dep:hyper", "dep:hyper-util", "dep:pin-project-lite", "dep:rustls", "dep:uuid", "dep:tokio-rustls", "dep:hyper-rustls", "dep:matchit", "dep:rand", "dep:switchboard-http-router", "dep:libloading"]
runtime = ["dep:tokio", "dep:tokio-util"]
plugin-dev = ["runtime"]
