[package]
name = "switchboard-pf"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"]}
switchboard-service = { version = "0.1.0", workspace = true }
tokio-util = { workspace = true, features = ["net", "codec"] }
tracing = { workspace = true }