[package]
name = "switchboard-http"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
bytes = "1.10.1"
futures-core = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "server", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["full"] }
pin-project-lite = "0.2.16"
rustls = { workspace = true }